--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background-image: url('assets/bg.png');
+  background-position: center center;
+  background-size: cover;
+}
