--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Montserrat:ital,wght@1,500&display=swap');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 .App {
   text-align: center;
@@ -67,6 +68,10 @@ body{
   width: 300px;
   height: auto;
 }
+.blue-duck {
+  width: 200px;
+  height: auto;
+}
 
 button, button:hover, button:active {
   background: transparent;
@@ -81,4 +86,29 @@ button:hover>img {
 }
 button>img {
   transition: .5s;
+}
+.modal-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: calc(.3rem - 1px);
+  border-top-right-radius: calc(.3rem - 1px);
+  background-image: url('/src/assets/header.png');
+  background-size: contain; 
+}
+
+.modal-body {
+  background-color: #dbfafd;
+}
+
+.modal-footer {
+  background-color: #dbfafd;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #00bcd4;
+  border-color: #007bff;
 }
