--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,9 @@ body{
   background-color: rgb(116, 234, 238);
   text-align: center;
 } */
-
+.greeting {
+font-family: 'DotGothic16', sans-serif;
+}
 .yellow-duck{
   width: 70vh;
   height: auto;
@@ -73,6 +75,14 @@ body{
 .menu-duck {
   width: 10vh;
   background: transparent;
+  display: flex;
+  align-content: flex-start;
+}
+.user-duck {
+  width: 10vh;
+  background: transparent;
+  display: flex;
+  align-content: flex-end;
 }
 .banner {
   width: 120vh;
