--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -31,14 +20,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 body{
   background-image: url('assets/bg.png');
@@ -47,12 +28,6 @@ body{
  
 }
 
-/* .subheading-text {
-  font-size: 2rem;
-  font-family: 'Montserrat', sans-serif;
-  background-color: rgb(116, 234, 238);
-  text-align: center;
-} */
 .greeting {
 font-family: 'DotGothic16', sans-serif;
 }
@@ -137,7 +112,7 @@ button>img {
 }
 @media screen and (max-width: 500px) {
   .banner {
-    width: 55vh;
+    width: 50vh;
     padding-bottom: 0%;
 }
 .yellow-duck {
@@ -156,5 +131,9 @@ button>img {
   width: 20vh;
   height: auto;
 }
-
+body{
+  background-image: url('assets/mobile_bg.png');
+  background-position: center center;
+  background-size: cover;
+}
 }
